--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,14 +5,23 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
-<!--  <servlet>-->
-<!--    <servlet-name>getRecord</servlet-name>-->
-<!--    <servlet-class>com.arun.controller.record.GetRecord</servlet-class>-->
-<!--  </servlet>-->
-<!--  <servlet-mapping>-->
-<!--    <servlet-name>getRecord</servlet-name>-->
-<!--    <url-pattern>/get-record</url-pattern>-->
-<!--  </servlet-mapping>-->
+  <servlet>
+    <servlet-name>login</servlet-name>
+    <servlet-class>com.arun.controller.security.Login</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>login</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>logout</servlet-name>
+    <servlet-class>com.arun.controller.security.Logout</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>logout</servlet-name>
+    <url-pattern>/logout</url-pattern>
+  </servlet-mapping>
 
   <servlet>
     <servlet-name>recordController</servlet-name>
@@ -40,6 +49,23 @@
     <servlet-name>linkStudent</servlet-name>
     <url-pattern>/link-student</url-pattern>
   </servlet-mapping>
+  
+  <filter>
+    <filter-name>studentsAuth</filter-name>
+    <filter-class>com.arun.filter.AuthFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>studentsAuth</filter-name>
+    <url-pattern>/students</url-pattern>
+  </filter-mapping>
+  <filter>
+    <filter-name>recordsAuth</filter-name>
+    <filter-class>com.arun.filter.AuthFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>recordsAuth</filter-name>
+    <url-pattern>/records</url-pattern>
+  </filter-mapping>
 
   
 </web-app>
